<resources>
    <string name="app_name">AiCalendar</string>
    <string name="action_settings">Settings</string>

    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="title_activity_editor">Enter title</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_lucky_wheel" translatable="false">Lucky Wheel</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in">Log in or register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Main Activity-->
    <color name="viewBg">#f1f5f8</color>
    <color name="album_title">#4c4c4c</color>

    <!--Editor Activity-->
    <string name="description">Description</string>
    <string name="desc_group" translatable="false">ImageView</string>
    <string name="desc_backBtn" translatable="false">toolbarBackBtn</string>
    <string name="group" translatable="false">Group</string>
    <string name="tv_add_new_option">Add new option</string>
    <string name="tv_add_option">Add option</string>
    <string name="tv_open_survey">Private survey</string>
    <string name="tv_one_option">Single option</string>
    <string name="tv_duration">Duration</string>
    <string name="tv_duration_time" translatable="false">02:00</string>
    <string name="tv_participants">Participants</string>
    <string name="tv_participants_title">Select participants</string>
    <string name="tv_color" translatable="false">color</string>
    <string name="ed_option">Name of option</string>
    <string name="tv_duration_min">min</string>
    <string name="tv_duration_hour">hour</string>
    <string name="tv_duration_2min">2 min</string>
    <string name="tv_duration_2minutes">2 minutes</string>
    <string name="tv_duration_10min">10 min</string>
    <string name="tv_duration_10minutes">10 minutes</string>
    <string name="tv_duration_30min">30 min</string>
    <string name="tv_duration_30minutes">30 minutes</string>
    <string name="tv_duration_1h">1 h</string>
    <string name="tv_duration_1hour">1 hour</string>
    <string name="tv_duration_custom">Custom</string>
    <string name="ok_btn" translatable="false">OK</string>
    <string name="survey_toast">You don\'t have permission to edit this Survey.
        You can edit only Surveys you created.</string>
    <string name="timezoneUkraine">Ukraine,Kiev</string>
    <string name="timezoneUK">Uk,London</string>
    <string name="timezoneLA">"America/Los_Angeles"</string>
    <!--Date-->
    <!--Days-->
    <string name="today">Today</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sanday</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <!--Month-->
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

    <string name="timeEventStart">Time event Start</string>
    <string name="timeEventEnd">Time event End</string>
    <string name="dateEventStart">Date event Start</string>
    <string name="dateEventEnd">Date event End</string>
    <string name="name_of_event">Enter name of event</string>
    <string name="hole_day">Hole day</string>

    <string name="saveBtn">SAVE</string>
    <string name="editor_cancel_dialog">Дійсно скасувати</string>
    <string name="positive_button_str">Так</string>
    <string name="negative_button_str">Ні, редагувати далі</string>

    <!--Editor Activity End-->

    <!-- Settings Start -->
    <string name="title_language">Language</string>
    <string name="desc_language">English</string>
    <string name="title_theme">Theme</string>
    <string name="desc_theme">Light</string>
    <string name="title_info" translatable="false">Info</string>
    <string name="desc_info">Information about app</string>

    <string name="theme_title">Chose a theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_yellow">Yellow</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_amoled" translatable="false">AmoLED</string>

    <string name="push_content">You got a survey, press here to participate</string>
    <string name="close">Close</string>
    <string name="release_date">May 2018</string>
    <string name="app_description">Hydra app it\'s and survey app that should help you take decisions with your friends or teammates, and take them fast.</string>

    <!-- Settings End -->


    <!--BottomSheet Activity Start-->
    <string name="title_bottomSheet">Select people</string>
    <string name="bottomSheet_search_tv">To</string>
    <string name="bottomSheet_search_hint">Type a name or email</string>
    <!--BottomSheet Activity End-->

    <!--LuckyWheel Activity Start-->
    <string name="spin_btn" translatable="false">Spin</string>
    <string name="chosen_lucky_wheel">Chosen option: </string>
    <!--LuckyWheel Activity End-->

    <!--DurationPicker Activity Start-->
    <string name="time_hour_00" translatable="false">00</string>
    <string name="time_hour_desc">h</string>
    <string name="time_minutes_00" translatable="false">00</string>
    <string name="time_minutes_desc">m</string>
    <string name="time_seconds_00" translatable="false">00</string>
    <string name="time_seconds_desc">s</string>
    <string name="deleteBtn" translatable="false">time_picker_deleteBtn</string>

    <string name="time_picker_1" translatable="false">1</string>
    <string name="time_picker_2" translatable="false">2</string>
    <string name="time_picker_3" translatable="false">3</string>
    <string name="time_picker_4" translatable="false">4</string>
    <string name="time_picker_5" translatable="false">5</string>
    <string name="time_picker_6" translatable="false">6</string>
    <string name="time_picker_7" translatable="false">7</string>
    <string name="time_picker_8" translatable="false">8</string>
    <string name="time_picker_9" translatable="false">9</string>
    <string name="time_picker_0" translatable="false">0</string>
    <string name="time_picker_button1">Cancel</string>
    <string name="time_picker_button2">Save</string>
    <!--DurationPicker Activity End-->

    <!-- Dialog -->
    <string name="dialog_ok_btn" translatable="false">OK</string>

    <string name="server_key" translatable="false">AAAAd9NLRsU:APA91bFUCs_hI7ndUjAP80N4FMj1hrb9cmt8OJWErz1eSWWpxfXadq7npnQJQRSHAga5qGUUGnLBlktNdGgbH7bR7OHKua4KF-n6y-X0f0U6JMeLnx5wnHqWkhJ-F3vrg6FVnlOEjux9</string>


    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="email_fmt" translatable="false">Email: %s</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="menu_delete" translatable="false">Delete</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="menu_item2">Create new survey</string>
    <string name="menu_item1">Lucky Wheel</string>
    <!-- FireBse Template Start -->
</resources>

